# ManipulationPython

./: .gitignore  Test.py  Test2.py  interpTEst.m  interpTEst.m~  interpolTest.data  interpolTestSpeed.data  interpolationSpline.m  interpolationSpline.m~  jacobian.m  untitled.m
Ev3/: GlobalSolver.m  RRRKinematic.m  Test.py  Test2.py  interpolationSpline.m  jacobian.m  microtest.m  pzkNumTrajectory.m  pzkNumTrajectory.m~  startpoint.m  untitled.m
Ev3/src/controll/: Calibration.py  Controller.py  PIDSpeedLowController.py  PIDTrajectoryController.py  TrajectoryController.py
Ev3/src/logger/: Logger.py
Ev3/src/motorModelTest/: frictionIdentify.py
Ev3/src/numKinematic/: DHParameters.py  OZK.py  SolverKinematic.py  VelocityKinematic.py
Ev3/src/state/: Logger.py  State.py
Ev3/src/util/: DeviceManager.py  Joint.py  Manipulator.py  TrajectoryPlaning.py
MatlabDynamicModel/: J3.mat  J3Speed.mat  momentFun.m  sam.slx  sam.slx.bak  untitled.slx
NumTraectory/: CMakeLists.txt  test  test.angle.out  test.out  test.speed.out
NumTraectory/src/: Jacobian.cpp  Jacobian.h  Test.cpp  main.cpp
NumTraectory/src/Kinematics/: CoordsTranslator.cpp  CoordsTranslator.h  Jacobian.cpp  Jacobian.h  ManipulatorConfiguration.cpp  ManipulatorConfiguration.h
NumTraectory/src/input/: Data.cpp  Data.h
NumTraectory/src/kinematics/: AccelerationTranslatorRRR.cpp  AccelerationTranslatorRRR.h  CoordsTranslator.cpp  CoordsTranslator.h  CoordsTranslatorRRR.cpp  CoordsTranslatorRRR.h  Jacobian.cpp  Jacobian.h  JacobianRRR.cpp  JacobianRRR.h  KinematicSolver.cpp  KinematicSolver.h  KinematicSolverRRR.cpp  KinematicSolverRRR.h  ManipulatorConfiguration.cpp  ManipulatorConfiguration.h  SpeedTranslatorRRR.cpp  SpeedTranslatorRRR.h
NumTraectory/src/lspbSolver/: LSPBWorkSpace.cpp  LSPBWorkSpace.h
NumTraectory/src/output/: DataOut.cpp  DataOut.h
NumTraectory/src/solver/: Solver.cpp  Solver.h  Spline.cpp  Spline.h
NumTraectory/src/splineSolver/: SolverSpline.cpp  SolverSpline.h  Spline.cpp  Spline.h
NumTraectory/src/traectoryPlaning/: TraectoryPlaner.cpp  TraectoryPlaner.h  TrajectoryPlaner.cpp  TrajectoryPlaner.h
PictureTranslator/: CMakeLists.txt
PictureTranslator/src/: main.cpp
PictureTranslator/src/figurs/: Curve.cpp  Curve.h  Ellipses.cpp  Ellipses.h  Figure.cpp  Figure.h  Line.cpp  Line.h  Path.cpp  Path.h
PictureTranslator/src/freemoving/: FreeMoving.cpp  FreeMoving.h
PictureTranslator/src/input/: SVGReader.cpp  SVGReader.h
PictureTranslator/src/kinematics/: ManipulatorKinematic.cpp  ManipulatorKinematic.h
PictureTranslator/src/parser/: CoordsTranslator.cpp  CoordsTranslator.h  SVGParser.cpp  SVGParser.h  SVGReader.cpp  SVGReader.h
PictureTranslator/src/util/: Configuration.h  MovingHandler.cpp  MovingHandler.h  Time_Parametrized.cpp  Time_Parametrized.h
src/: Test.py
src/controll/: Calibration.py  Controller.py  PIDControll.py
src/numKinematic/: OZK.py  PZK.py  VelocityKinematic.py
src/state/: Logger.py  State.py
src/util/: Joint.py  JointManager.py  Man.py  Manipulator.py  OZK.py
